fixed layout issues and add activation.create event

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@ html, body {
       svg{
         width: 100%;
         height: 100%;
+        
         .circle{
           stroke-dashoffset: 0;
           stroke-dasharray:300;
@@ -46,11 +47,11 @@ html, body {
   }
   
   .mobileBg {
-    background: no-repeat url('../../public/bg-ativacoes-mobile.png');
+    background: radial-gradient(58.89% 72.1% at 64.57% 48.7%, rgba(0, 0, 0, 0.00) 0%, #000 100%), #26242A;
   }
   
   .tvBg {
-    background: url('/public/bg-ativacoes-tv.png')
+    background: radial-gradient(58.89% 72.1% at 64.57% 48.7%, rgba(0, 0, 0, 0.00) 0%, #000 100%), linear-gradient(0deg, #1F1F1F 0%, #1F1F1F 100%), linear-gradient(0deg, #26242A 0%, #26242A 100%), #26242A;
   }
   
   .spin {
